components/hac-boot/proxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    haproxy.router.openshift.io/rewrite-target: /
    route.openshift.io/termination: reencrypt
  labels:
    frontend: hac-proxy
  name: hac-proxy
spec:
  ingressClassName: openshift-default
  rules:
    - host: https://a333d6e9d86204574863d88983f71f07-1d4d257a8e755b52.elb.us-east-1.amazonaws.com:6443
      http:
        paths:
          - backend:
              service:
                name: hac-proxy
                port:
                  number: 8000
            path: /api/k8s
            pathType: Prefix
  tls:
    - {}
